Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.13-dev-828-gb863ecc33f4ef65a80878596438a203d50e8e90f
Description
Reproduction steps
Right click a free area on the desktop
Expected result
2K3_SP2_ok.png opens the context menu, but the submenu of first item remains collapsed until the mouse pointer hovers the first item
Observed result
0.4.13-dev-1168-gb9a2eee_submenu.png erroneously immediately opens the context menus first entry submenu.
Attachments
Issue Links
- relates to
-
CORE-16244 Popup menu window styles are wrong
- Resolved