[WIN32SS][NTUSER] Fix desktop popup menu (CORE-16382)